src/components/Header/Header.scss
@import "/src/sass/mixins.scss";
@import "/src/sass/variables.scss";
@import "/src/sass/colors.scss";

.header {
  .header-input {
    width: 100%;
    height: 60px;
    display: flex;
    justify-content: space-between;
    padding: 5px 9px;
    background-color: $secondary-background-color;

    .logo-spacing {
      display: flex;
    }

    .amazon-logo {
      width: 113px;
      height: 50px;
      padding: 13px 8px 0px 6px;
      cursor: pointer;
    }

    .amazon-logo:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    .deliver-spacing {
      width: max-content;
      height: 50px;
      display: flex;
      align-items: center;
      padding: 0 9px 0 9px;
      margin: 0px 2px 5px 5px;

      .location-logo {
        width: 19px;
        height: 22px;
        margin-top: 5px;
      }

      .deliver {
        border: none;
        background-color: $secondary-background-color;
        color: $primary-text-color;

        .deliver-to {
          display: flex;
          font-size: 11px;
          color: #cccccc;
        }

        .usa {
          font-size: $font-size-14px;
          font-weight: bold;
        }
      }
    }

    @media (max-width: 871px) {
      .deliver-spacing {
        display: none;
      }
    }
  }

  @media (max-width: 587px) {
    .header-input {
      height: auto;
      flex-direction: column;
      position: relative;
    }
  }

  .search-bar {
    width: 100%;
    height: 38px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    margin: 6px 10px;
    background-color: #ffffff;
    border-radius: 4px;

    .search-modal {
      width: 100%;
      height: auto;
      max-height: 276px;
      position: absolute;
      background-color: white;
      top: 37px;
      left: 0;
      z-index: 2;
      overflow: hidden;
      border: 1px solid #cdcdcd;
      animation: 0.2s linear search-modal;

      .search-modal-element {
        height: 39px;
        width: 100%;
        display: flex;
        align-items: center;
        padding: 6px;
        cursor: pointer;

        img {
          width: 26px;
          padding: 4px;
        }

        p {
          padding: 2px;
          font-size: 12px;
          font-weight: 600;
          letter-spacing: 1px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }

      .search-modal-element:hover {
        background-color: #f0f0f0;
      }
    }

    .search-amazon {
      position: relative;

      .search-amazon.outline {
        outline: 3px solid #ffbc58;
      }

      .search-amazon::placeholder {
        padding-left: 5px;
      }
    }
    .input-spacing {
      width: 100%;
      display: flex;
      align-items: center;
    }

    .select-niche {
      height: 38px;
      width: 50px;
      padding: 0 0 0 5px;
      font-size: $font-size-12px;
      background-color: #e6e6e6;
      color: #0f1111;
      border-radius: 4px 0 0 4px;
      border: none;
    }

    .select-niche:focus {
      outline: 3px solid #ffbc58;
    }

    .search-amazon {
      width: 100%;
      padding: 11px 0 11px 10px;
      margin-left: 3px;
      outline: none;
      border: none;
    }

    .search-amazon:focus {
      outline: 3px solid #ffbc58;
    }

    .search-amazon::placeholder {
      font-size: $font-size-14px;
      margin-left: 5px;
    }

    .search-button {
      width: 45px;
      height: 38px;
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: #ffbc58;
      border: none;
      border-radius: 0px 4px 4px 0px;
      cursor: pointer;
    }

    .search-button img {
      width: 24px;
      height: 24px;
      margin-top: 3px;
    }

    .search-button:hover {
      background-color: #edb055;
    }

    .loader::after {
      content: "";
      box-sizing: border-box;
      width: 100px;
      height: 100px;
      border-radius: 8px;
      background: #fff;
      position: absolute;
      top: 0;
      left: 0;
    }

    @keyframes animloader {
      0% {
        background-position: 0% 0, 120px 0, 120px 40px, 120px 80px;
      }
      100% {
        background-position: 100% 0, 120px 0, 120px 40px, 120px 80px;
      }
    }
  }

  @media (max-width: 587px) {
    .search-bar {
      width: 96%;
    }
  }

  .amazon-tools {
    display: flex;

    .change-language {
      height: 50px;
      display: flex;
      align-items: center;
      padding: 10px 2px 0px 9px;
      color: $primary-text-color;
      font-size: $font-size-14px;
      font-weight: bold;
      cursor: pointer;

      img {
        width: 19px;
        height: 14px;
        margin-right: 4px;
      }

      .dropdown {
        width: 15px;
        height: 10px;
        margin-top: 6px;
      }
    }

    @media (max-width: 871px) {
      .change-language {
        display: none;
      }
    }

    .sign-in {
      width: max-content;
      height: 50px;
      display: flex;
      padding: 0px 9px 10px;
      color: $primary-text-color;
      text-decoration: none;
      cursor: pointer;

      .sign-in-spacing {
        padding-top: 5px;
      }

      .sign-in-text {
        font-size: $font-size-12px;

        span {
          margin-left: 3px;
        }
      }

      @media (max-width: 587px) {
        .sign-in-spacing {
          margin-top: -5px;

          .sign-in-text {
            display: none;
          }

          .account-list {
            padding-top: 15px;
            display: flex;
            justify-content: center;
            align-items: center;
          }
        }
      }

      .account-list {
        font-size: $font-size-14px;
      }
    }

    .sign-in-dropdown {
      width: 15px;
      height: 10px;
      margin: 29px 0 0 2px;
    }

    .sign-in:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    @media (max-width: 587px) {
      .sign-in {
        position: absolute;
        top: 0;
        right: 84px;
      }

      .sign-in:hover {
        outline: none;
      }
    }

    .returns-orders {
      width: max-content;
      height: 50px;
      padding: 5px 9px 10px;
      cursor: pointer;
    }

    @media (max-width: 871px) {
      .returns-orders {
        display: none;
      }
    }

    .returns-orders span {
      font-size: $font-size-12px;
      color: $primary-text-color;
    }

    .returns-orders p {
      font-size: $font-size-14px;
      font-weight: bold;
      color: $primary-text-color;
    }

    .returns-orders:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    .cart {
      display: flex;
      padding: 5px 9px 11px;
      position: relative;
      cursor: pointer;

      .loading {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-bottom: 8px;
        position: absolute;
        top: -4px;
        right: -7px;

        .loader-spacing {
          display: flex;
          justify-content: space-around;

          .loader {
            width: 15px;
            height: 15px;
            position: absolute;
            top: 6px;
            right: 23px;
            margin-right: -3px;
            display: inline-block;
            border: 5px solid #f08804;
            border-bottom-color: transparent;
            border-radius: 50%;
            animation: rotation 1s linear infinite;
          }

          @keyframes rotation {
            0% {
              transform: rotate(0deg);
            }
            100% {
              transform: rotate(360deg);
            }
          }
        }
      }

      .cart-count {
        position: relative;

        span {
          position: absolute;
          right: 15px;
          top: 0px;
          font-weight: bold;
          color: #f08804;
        }
      }

      .cart-text {
        padding-top: 18px;
        font-size: $font-size-14px;
        font-weight: bold;
        color: $primary-text-color;
      }
    }

    .cart:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    @media (max-width: 587px) {
      .cart {
        position: absolute;
        top: 0;
        right: 0;
      }
      .cart:hover {
        outline: none;
      }
    }
  }

  .change-language:hover {
    @include outline(1px solid #ffffff);
    @include border-radius(2px);
  }

  .nav-bar {
    width: 100%;
    height: 40px;
    display: flex;
    align-items: center;
    background-color: $tertiary-background-color;
    cursor: pointer;

    .open-sidebar {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 8px 9px;
      margin-left: 5px;
      font-size: $font-size-14px;
      font-weight: bold;
      background-color: $tertiary-background-color;
      color: $primary-text-color;
      border: none;
      cursor: pointer;

      img {
        width: 20px;
        height: 20px;
        margin-right: 2px;
      }
    }

    .open-sidebar:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    @media (max-width: 587px) {
      .open-sidebar:hover {
        outline: none;
      }
    }

    a:first-child img {
      width: 14px;
      height: 17px;
      margin-right: 2px;
    }

    a {
      display: flex;
      justify-content: center;
      align-items: center;
      text-decoration: none;
      padding: 8px 9px;
      margin-left: 5px;
      font-size: $font-size-14px;
      text-align: center;
      color: $primary-text-color;
    }

    a:hover {
      @include outline(1px solid #ffffff);
      @include border-radius(2px);
    }

    @media (max-width: 587px) {
      a:hover {
        outline: none;
      }
    }
  }

  .nav-bar::-webkit-scrollbar {
    width: 0;
  }

  @media (max-width: 587px) {
    .nav-bar {
      height: 72px;
      padding-top: 9px;
      overflow: scroll;
    }
  }

  .search-modal-background {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 100px;
    left: 0;
    opacity: 0.8;
    z-index: 1;
    background-color: #0f1111;
    animation: 0.1s modal-background forwards;
  }
}

@keyframes search-modal {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes modal-background {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.8;
  }
}

@media (max-width: 587px) {
  .header {
    width: auto;
    max-width: 587px;
  }
}

